package Factory;
/**
 * Інтерфейс для кнопки.
 */
interface Button {
    /**
     * Малює кнопку.
     */
    void paint();
    /**
     * Обробляє натискання кнопки.
     */
    void click();
}