package Factory;
/**
 * Інтерфейс для чекбоксу.
 */
interface Checkbox {
    /**
     * Малює чекбокс.
     */
    void paint();
    /**
     * Обробляє натискання чекбоксу.
     */
    void click();
}
